test_datas/compile_fail/type_mismatch_assign.pgl
package main;

func main() {
    x := 42;
    x = "now a string";
}
